--- a/content/posts/2025-01-06_aws_s3.md
+++ b/content/posts/2025-01-06_aws_s3.md
@@ -10,30 +10,28 @@ revision = 1
 
 # Cloud Storage using AWS
 
-Most businesses operating in AWS will typically end up being heavy users of their storage service S3.  S3 (alongside EC2) is one of the most successful infrastructure as a service (IaaS) offerings of AWS.  The key parameters when considering a cloud storage setup are:
+Most businesses operating in AWS will typically end up being heavy users of their storage service S3.  S3 (alongside EC2) is one of the most successful infrastructure as a service (IaaS) offerings of AWS.  The ability to scale up & down storage as needed and with all the capabilities required of modern businesses is an important enabler for growth.  Those key capabilities that are needed include:
+ 
+- **Durability, Performance and Availability:** The ability to easily control redundancy and performance capabilities via configuration is extremely powerful.  
 
-- Durability and availability
-The ability to easily control redundancy and performance capabilities via configuration is extremely powerful.  
-
-- Security and compliance
-With cloud storage you can control where your data is stored, who can access it, whether it can be modified, and if and how it is encrypted.  
+- **Security and compliance:** Being able to control where your data is stored, who can access it, whether it can be modified, and if and how it is encrypted.  
 
 ## Models of Use
 
-The most common uses of storage are related to:
+The most common uses of cloud storage are related to:
 
 - Application Management
-- Datalakes 
+- Datalakes (for analytic and data processing / warehousing pipelines)
 - Backup and Disaster Recovery (DR)
 - Audit, Compliance and Archive
 
-Each of these will have different parameters that will be optimised each use case.
+Each of these will has different configurations that will be optimised for use.
 
 ## Operational Challenges
 
-The challenge for the infrastructure manager is that data is easy to create or receive, but much harder to delete. Past business orthodoxy is that *data was the new oil*, and that holding data would enable the success of past oil barons.  This belief in the opportunity enabled by data, and the hesitance faced by anyone asked if a specific item can be removed *permanently* has resulted in ever increasing data foot prints. But more recent thinking in the light of many serious and highly damaging data breaches is [that data is more like uranium than oil](https://www.google.com/search?q=data+is+the+new+uranium).   Note: I believe it's mandatory at every conference (no matter what the topic is) for someone to mention this.  The metaphor being that data while powerful and with the ability to enable a business to succeed, can also be dangerous if mishandled or allowed to escape from control. 
+The challenge for the infrastructure manager is that data is easy to generate or receive, but much harder to delete. Past business orthodoxy is that *data was the new oil*, and that holding data would enable the success that oil created in its heyday.  This belief in the opportunity enabled by data, and the hesitancy faced by anyone asked if an item can be removed *permanently* has resulted in ever increasing data foot prints. But more recent thinking, in the light of many serious and highly damaging data breaches is [that data is more like uranium than oil](https://www.google.com/search?q=data+is+the+new+uranium).   Note: I believe it's mandatory at every conference (no matter what the topic is) for someone to mention this.  The metaphor being that data while powerful and with the ability to enable a business to succeed, can also be dangerous if mishandled or allowed to escape from control. 
 
-In theory building a system that can self-manage through automated retention rules can avoid a lot of this pain. In practice (at least where humans are involved) it can be hard to achieve.  This ever-expanding data footprint will likely proceed unnoticed until the cost of it forces there to be attention applied.  It's when you start trying to manage [the cost of S3](https://docs.aws.amazon.com/AmazonS3/latest/userguide/aws-usage-report-understand.html) that you really start diving into the configuration options that are available. 
+In theory building a system that can self-manage through automated retention rules can avoid a lot of this pain. In practice (at least where humans are involved) it can be hard to achieve universally.  This ever-expanding data footprint will likely proceed unnoticed until the cost of it forces attention to be applied.  It's when you start trying to manage [the cost of S3](https://docs.aws.amazon.com/AmazonS3/latest/userguide/aws-usage-report-understand.html) that you really start diving into the configuration options that are available. 
  
 ## Management Tools - Storage Lens
 
@@ -41,11 +39,11 @@ The recommended tool for managing S3 in AWS is [Storage Lens](https://aws.amazon
 
 - **Usage Monitoring**: The number of objects, bucket sizes, and growth trends.
 - **Activity Insights** : Request pattern and access frequency reporting
-- **Cost Optimization**: Helps identify unused or rarely accessed data so you can move it to lower-cost storage classes
+- **Cost Optimisation**: Helps identify unused or rarely accessed data so you can move it to lower-cost storage classes
 - **Security & Compliance Monitoring**: Detects potential security risks such as publicly accessible buckets
 - **Multi-Account Visibility** : Allows centralised reporting across multi-account setups
 
-But, accessing many of these features in a useful way requires enabling the premium (paid) version of Storage Lens, and in my experience the cost and usage capabilities are still limited.
+But, accessing many of these features in a useful way requires enabling the premium (paid) version of Storage Lens which at scale can be expensive. 
 
 ## Managing Usage and Costs
 
@@ -53,9 +51,9 @@ The cost explorer will give the basics quite easily and allow you to present cos
 
 ![AWS S3 Cost Report](https://toobstar.github.io/images/aws_s3_cost.jpg)
 
-The issue soon arises that cost per GB varies depending on how you have your S3 configured.  And actually further complicating that picture is that file count matters and many smaller files under certain circumstances can end up costing much more than fewer larger files of the same overall size. 
+The issue soon arises that cost per GB varies depending on the storage class you are using.  And further complicating that picture is that file count matters and many smaller files can end up costing much more than fewer larger files of the same overall size. 
 
-It's also natural to focus on the sizing element of cloud data storage, but a key element of cost is network transfers.  These could be within AWS's networks or out of their networks (but not *into* their cloud which they will happily do for free).  Transfer costs and penalties associated with file count are the 2 hidden cost pain points of cloud storage. 
+It's also natural to focus on the footprint (size) of cloud data storage, but a key element of cost is network transfers.  These could be within AWS's networks or out of their networks (but not *into* their cloud which they will happily do for free).  Transfer costs and penalties associated with file count are the 2 hidden cost pain points of cloud storage. 
 
 ## Activating the secret Storage usage report
 
@@ -90,7 +88,7 @@ The key goal will always be to delete what is not required.  But presuming that 
 
 Where there is:
 - an ongoing requirement for (potential) instant access
-- it's not possible to say whether the data can be deleted or not
+- and it's not possible to say whether the data can be deleted or not
 
 then [intelligent tiering](https://aws.amazon.com/s3/storage-classes/intelligent-tiering/) can be an appealing model for dynamic storage-class control that is managed by AWS. In this model AWS tracks the access pattern for objects and will over time progress that object through cheaper classes of storage on the basis that this lack of access will continue.  We can eventually get the benefits of cheaper storage classes without having to make the decision as to what that class should be.
 
@@ -102,7 +100,7 @@ Essentially it's a bet that over a basket of objects most will not be frequently
 
 ## Conclusion
 
-It's interesting to consider alternatives to solving cloud storage with S3 such as those [shared by well known agitator DHH](https://world.hey.com/dhh/it-s-five-grand-a-day-to-miss-our-s3-exit-b8293563), but for most businesses that is impractical due to the effort and expertise required, and the fact that usage requirements can be hard to predict and the value prop of cloud is just so practical. But, management and oversight does require ongoing attention to ensure cost is controlled and other requirements like security and performance are met.
+It is interesting to consider [alternatives to solving cloud storage with AWS S3 such as those shared by DHH](https://world.hey.com/dhh/it-s-five-grand-a-day-to-miss-our-s3-exit-b8293563), but for most businesses that is impractical due to the effort and expertise required.  For most businesses usage requirements can be hard to predict and the value proposition of the cloud means the utilisation pay-off outweighs the unit-pricing difference. But, data storage management and oversight does require ongoing attention to ensure cost is controlled and other requirements like security and performance are met.
 
 
 
