--- a/content/posts/2025-01-06_aws_s3.md
+++ b/content/posts/2025-01-06_aws_s3.md
@@ -1,5 +1,5 @@
 +++
-title = 'Optimising Cloud Storage in AWS and finding the secret cost report'
+title = 'Optimising Cloud Storage in AWS and finding the Secret Cost Report'
 date = 2024-12-06T15:29:43+11:00
 draft = false
 tags = ['AWS', 'CIO', 'Cloud', 'Infrastructure', 'S3']
@@ -100,7 +100,7 @@ Essentially it's a bet that over a basket of objects most will not be frequently
 
 ## Conclusion
 
-It is interesting to consider [alternatives to solving cloud storage with AWS S3 such as those shared by DHH](https://world.hey.com/dhh/it-s-five-grand-a-day-to-miss-our-s3-exit-b8293563), but for most businesses that is impractical due to the effort and expertise required.  For most businesses usage requirements can be hard to predict and the value proposition of the cloud means the utilisation pay-off outweighs the unit-pricing difference. But, data storage management and oversight does require ongoing attention to ensure cost is controlled and other requirements like security and performance are met.
+It is interesting to consider [alternatives to solving cloud storage with AWS S3 such as those shared by DHH](https://world.hey.com/dhh/it-s-five-grand-a-day-to-miss-our-s3-exit-b8293563), but for most businesses that is impractical due to the effort and expertise required.  It's also typical for growing businesses that usage requirements can be hard to forecast and the value proposition of the cloud means the utilisation pay-off (only pay for what you use) outweighs the unit-pricing difference. But, data storage management and oversight does require ongoing attention to ensure cost is controlled and other requirements like security and performance are met.
 
 
 
