aws cost reporting

--- a/content/posts/2023-10-09_metrics.md
+++ b/content/posts/2023-10-09_metrics.md
@@ -11,7 +11,7 @@ revision = 1
 
 ## Common Business Metrics and Leading vs Lagging indicators
 
-There are many drivers to to have clarity around the performance of a business.  Most directly they are internal for the executive, board and leadership team to be able set strategy and track performance to that. But they are also external such as compliance (e.g. regulatory oversight and accounting) or fund-raising (e.g. venture capital).  
+There are many drivers to have clarity around the performance of a business.  Most directly they are internal for the executive, board and leadership team to be able set strategy and track performance to that. But they are also external such as compliance (e.g. regulatory oversight and accounting) or fund-raising (e.g. venture capital).  
 
 In order to do this efficiently there are a number of standardised metrics that are used.  Where financially focused these will target either the cost side, the revenue side, or some ratio between the two.  Common examples include: 
 
@@ -21,7 +21,7 @@ In order to do this efficiently there are a number of standardised metrics that 
 - the average duration it takes to "pay back" customer acquistion costs 
 - revenue per employee (RPE)
 
-These well known metrics are preferred because there are industry expectations for each and having an easy method for comparison is highly desirable for understanding performance.  These are all lagging indicators in that they are tracking historical record rather than making a prediction about the future that a leading indicator might show.  Sales pipeline metrics or customer engagement or behaviour are often used as leading indicators which would provide the opportunity to anticipate an outcome and act to influence that prior to it happening.  Leading indicators may be less reliable or open to intepretation so are inherently less trusted.  Examples of leading indicators include:
+These well known metrics are preferred because there are industry expectations for each and having an easy method for comparison is highly desirable for understanding performance.  These are all lagging indicators in that they are tracking historical record rather than making a prediction about the future that a leading indicator might show.  Leading indicators may provide an opportunity to anticipate an outcome and act to influence that prior to it happening but are less reliable or open to intepretation so are inherently less trusted.  Examples of leading indicators include:
 
 - sales pipeline coverage (multipler over budget)
 - customer usage of the service
@@ -43,7 +43,7 @@ The goal outcome for knowing these metrics is an ability to forecast costs given
 
 ## Cloud Infrastructure Cost Reporting
 
-Examples of fixed costs in a cloud infrastructure environment would be data storage and servers (for a stable production environment) where as variable costs might be analytical work or compute for temporary or ad hoc work.  By tagging or having a methodology for putting the infrastructure costs in appropriate buckets the process of getting to these metrics can be significantly automated. 
+Examples of fixed costs in a cloud infrastructure environment would be data storage and servers (for a stable production environment) where as variable costs might be analytical tasks or compute for temporary or ad hoc work.  By tagging or having a methodology for putting the infrastructure costs in appropriate buckets the process of getting to these metrics can be significantly automated. 
 
 A good starting point for this process is to identify the 'dimensions' for analysis. I've written more on dimensions [here](https://github.com/toobstar/data-tools).  These reporting dimensions would typically include:
 
@@ -55,7 +55,29 @@ A good starting point for this process is to identify the 'dimensions' for analy
 
 With these dimensions sorted it's then necessary to ensure your cost drivers (such as AWS in the example I'll continue with) can be identified in the cost reporting tools. Where these are not built into standard attributes of AWS these can be set with tags (although not retrospectively of course). 
 
+## An AWS Cost Reporting Solution
 
+A simple pattern I've developed for cost reporting in AWS is to extract the costs using [a script](https://github.com/toobstar/aws-scripts) and then store and model them in a BI Dashboard like [PowerBI](https://www.microsoft.com/en-us/power-platform/products/power-bi) or [Looker Studio](https://cloud.google.com/looker).
+
+The [script](https://github.com/toobstar/aws-scripts) uses the [AWS boto3 Python SDK](https://aws.amazon.com/sdk-for-python/).  Although the [AWS Cost explorer](https://aws.amazon.com/aws-cost-management/aws-cost-explorer/) is extremely useful for ad hoc cost reporting it has various constraints for ongoing cost tracking:
+
+- There is limited history in Cost Explorer although this [has been extended recently](https://aws.amazon.com/about-aws/whats-new/2023/11/aws-cost-explorer-provides-historical-granular-data/). By extracting the data yourself you can manage it fully.
+
+- The filters & grouping capabilities of the Cost Explorer UI are powerful, but lack the ability to be combined (using boolean logic) for more advanced tracking.  When using the API and simple object modelling this is quite easy to achieve.
+
+- The reporting and export to S3 capabilities of the Cost Explorer are tricky to work with.  Yes, there are [solutions that plug proper reporting platforms into this](https://grafana.com/grafana/dashboards/139-aws-billing/) but you need to be prepared for the effort to setup and maintain these. 
+
+### General Comments on AWS Cost Tracking
+
+1. Use AWS accounts to delineate cost centres as much as possible.  Being able to filter by account is a full-proof separator that will capture all costs.  Note: a [multi-account strategy](https://docs.aws.amazon.com/whitepapers/latest/organizing-your-aws-environment/organizing-your-aws-environment.html) is part of the AWS 'well architected' framework review 
+
+2. Invariably tagging & tracking services by name will locate most but not all of the costs in your bill. The gaps will be hard to allocate and where you aren't using a multi-account approach as in point (1) these will be present.  This script attempts resolve that by firstly determining the total cost for the month.  After doing the filter based reporting, it then determines the gap to the total and uses that to scale up the results so they match.  This approach is not 100% correct obviously, but is a low effort solution, and based on the % adjustment you can decide whether it's acceptable.  Obviously tinkering with the filters can improve this outcome if that's needed. 
+
+3. The dimensions defined above can be modelled in the cost_filters.py file linked with the script 
+
+4. By using a solution outside of AWS it's easier to merge with the cost of other vendors.  You can also further process the data such as apply exchange rates (whether that be at time of invoicing, or an agreed rate set for budgeting purposes). 
+
+![Cost Reporting](https://toobstar.github.io/images/aws_cost_reporting.jpg)
 
 
 
