updates and pub

--- a/content/posts/2023-10-09_metrics.md
+++ b/content/posts/2023-10-09_metrics.md
@@ -1,7 +1,7 @@
 +++
 title = 'Business Metrics, KPIs and AWS Infrastructure Cost Reporting'
 date = 2025-03-10T17:13:35+11:00
-draft = true
+draft = false
 tags = ['budgets', 'CIO', 'Cost', 'Forecasting']
 revision = 1
 +++
@@ -43,6 +43,20 @@ The goal outcome for knowing these metrics is an ability to forecast costs given
 
 ## Cloud Infrastructure Cost Reporting
 
+In modern businesses I.T. and in particular cloud infrastructure is (outside of labour) both the top cost and enabler for the business. Its ability to influence the success of the business means that having a handle on cost modelling is critical.  In my previous [article on delivery maturity](https://toobstar.github.io/posts/2024-08-27_cloud_maturity/) I discussed an overview of cost reporting capabilities that I'll touch on here.
+
+
+| Cost Factor         | Description                                                                                      |
+| ------------ | ------------------------------------------------------------------------------------------------ 
+| Attribution         | All I.T. & infrastructure services are attributed to a cost centre                                                                                                           |
+| Owner               | Cost centres have owners or related stakeholders who are informed of cost positions                                                                                      |
+| Modelling           | As described in this article an understanding exists of the key reporting dimensions relevant for the business |
+| Reporting           | Regular cost reports are presented to stakeholders in a way that aligns to the cost model and facilitates informed cross-functional decisions          |
+| Budgets & Forecasts | Cost Forecasts are made for the cost centres and actual costs are tracked against budgets over time                                                                      |
+| Anomaly Detection   | Spikes in cost are detected in a timely way so action can be taken to prevent unintended blowouts                                                                        |
+
+
+
 Examples of fixed costs in a cloud infrastructure environment would be data storage and servers (for a stable production environment) where as variable costs might be analytical tasks or compute for temporary or ad hoc work.  By tagging or having a methodology for putting the infrastructure costs in appropriate buckets the process of getting to these metrics can be significantly automated. 
 
 A good starting point for this process is to identify the 'dimensions' for analysis. I've written more on dimensions [here](https://github.com/toobstar/data-tools).  These reporting dimensions would typically include:
@@ -67,15 +81,15 @@ The [script](https://github.com/toobstar/aws-scripts) uses the [AWS boto3 Python
 
 - The reporting and export to S3 capabilities of the Cost Explorer are tricky to work with.  Yes, there are [solutions that plug proper reporting platforms into this](https://grafana.com/grafana/dashboards/139-aws-billing/) but you need to be prepared for the effort to setup and maintain these. 
 
-### General Comments on AWS Cost Tracking
+Other considerations with AWS Cost Tracking:
 
-1. Use AWS accounts to delineate cost centres as much as possible.  Being able to filter by account is a full-proof separator that will capture all costs.  Note: a [multi-account strategy](https://docs.aws.amazon.com/whitepapers/latest/organizing-your-aws-environment/organizing-your-aws-environment.html) is part of the AWS 'well architected' framework review 
+- Use AWS accounts to delineate cost centres as much as possible.  Being able to filter by account is a full-proof separator that will capture all costs.  Note: a [multi-account strategy](https://docs.aws.amazon.com/whitepapers/latest/organizing-your-aws-environment/organizing-your-aws-environment.html) is part of the AWS 'well architected' framework review 
 
-2. Invariably tagging & tracking services by name will locate most but not all of the costs in your bill. The gaps will be hard to allocate and where you aren't using a multi-account approach as in point (1) these will be present.  This script attempts resolve that by firstly determining the total cost for the month.  After doing the filter based reporting, it then determines the gap to the total and uses that to scale up the results so they match.  This approach is not 100% correct obviously, but is a low effort solution, and based on the % adjustment you can decide whether it's acceptable.  Obviously tinkering with the filters can improve this outcome if that's needed. 
+- Invariably tagging & tracking services by name will locate most but not all of the costs in your bill. The gaps will be hard to allocate and where you aren't using a multi-account approach as in point (1) these will be present.  This script attempts resolve that by firstly determining the total cost for the month.  After doing the filter based reporting, it then determines the gap to the total and uses that to scale up the results so they match.  This approach is not 100% correct obviously, but is a low effort solution, and based on the % adjustment you can decide whether it's acceptable.  Obviously tinkering with the filters can improve this outcome if that's needed. 
 
-3. The dimensions defined above can be modelled in the cost_filters.py file linked with the script 
+- The dimensions defined above can be modelled in the cost_filters.py file linked with the script 
 
-4. By using a solution outside of AWS it's easier to merge with the cost of other vendors.  You can also further process the data such as apply exchange rates (whether that be at time of invoicing, or an agreed rate set for budgeting purposes). 
+- By using a solution outside of AWS it's easier to merge with the cost of other vendors.  You can also further process the data such as apply exchange rates (whether that be at time of invoicing, or an agreed rate set for budgeting purposes). 
 
 ![Cost Reporting](https://toobstar.github.io/images/aws_cost_reporting.jpg)
 
