--- a/content/posts/2023-10-09_metrics.md
+++ b/content/posts/2023-10-09_metrics.md
@@ -28,7 +28,7 @@ These well known metrics are preferred because there are industry expectations f
 - support activity 
 - percentage of business from referals 
 
-At some point these metrics converge with the work of the accounting team where the viewpoint is focussed on OpEx/CapEx or from the cashflow statement:
+At some point these metrics converge with the work of the finance and accounting team where the viewpoint is focussed on OpEx/CapEx or from the cashflow statement:
 
 -  **"above the line" costs**: required to enable revenue (e.g. COGS) 
 -  **"below the line" costs**: general and administrative costs
@@ -36,8 +36,7 @@ At some point these metrics converge with the work of the accounting team where 
 A practical example of how this translates to a SaaS business is the desire to understand:
 
 - the cost of product development (including related I.T. and infrastructure costs)
-- the cost of delivering a single sales (the incremental cost)
-- the cost of servicing a single sale (the fixed cost)
+- the incremental cost of delivering and then servicing a unit sale 
 
 The goal outcome for knowing these metrics is an ability to forecast costs given the various scenarios of sales and or other activity (e.g. product development) within the organisation.  The outcome will be a blend of fixed costs that continue regardless of activity or variable costs that are dynamic and linked to what is happening in the business. 
 
@@ -61,10 +60,10 @@ Examples of fixed costs in a cloud infrastructure environment would be data stor
 
 A good starting point for this process is to identify the 'dimensions' for analysis. I've written more on dimensions [here](https://github.com/toobstar/data-tools).  These reporting dimensions would typically include:
 
-- time: daily, weekly, monthly
-- geography: state, country
-- service type: perhaps related to the customer or sales categorisations
-- organisation: team or business unit
+- time (e.g. daily, weekly, monthly)
+- geography (e.g state, country)
+- service type (perhaps related to the customer or sales categorisations)
+- organisation (e.g team or business unit)
 - cost profile: fixed, variable (as described above)
 
 With these dimensions sorted it's then necessary to ensure your cost drivers (such as AWS in the example I'll continue with) can be identified in the cost reporting tools. Where these are not built into standard attributes of AWS these can be set with tags (although not retrospectively of course). 
@@ -85,7 +84,7 @@ Other considerations with AWS Cost Tracking:
 
 - Use AWS accounts to delineate cost centres as much as possible.  Being able to filter by account is a full-proof separator that will capture all costs.  Note: a [multi-account strategy](https://docs.aws.amazon.com/whitepapers/latest/organizing-your-aws-environment/organizing-your-aws-environment.html) is part of the AWS 'well architected' framework review 
 
-- Invariably tagging & tracking services by name will locate most but not all of the costs in your bill. The gaps will be hard to allocate and where you aren't using a multi-account approach as in point (1) these will be present.  This script attempts resolve that by firstly determining the total cost for the month.  After doing the filter based reporting, it then determines the gap to the total and uses that to scale up the results so they match.  This approach is not 100% correct obviously, but is a low effort solution, and based on the % adjustment you can decide whether it's acceptable.  Obviously tinkering with the filters can improve this outcome if that's needed. 
+- Invariably tagging & tracking services by name will locate most but not all of the costs in your bill. The gaps will be hard to allocate and where you aren't using a multi-account approach as in point (1) these will be present.  This script attempts resolve that by firstly determining the total cost for the month.  After doing the filter based reporting, it then determines the gap to the total and uses that to scale up the results so they match.  This approach is not 100% correct obviously, but is a low effort solution, and based on the % adjustment you can decide whether it's acceptable.  Tinkering with the filters can improve this outcome if that's needed. 
 
 - The dimensions defined above can be modelled in the cost_filters.py file linked with the script 
 
