--- a/content/posts/2023-10-09_metrics.md
+++ b/content/posts/2023-10-09_metrics.md
@@ -30,8 +30,8 @@ These well known metrics are preferred because there are industry expectations f
 
 At some point these metrics converge with the work of the finance and accounting team where the viewpoint is focussed on OpEx/CapEx or from the cashflow statement:
 
--  **"above the line" costs**: required to enable revenue (e.g. COGS) 
--  **"below the line" costs**: general and administrative costs
+-  "above the line" costs: required to enable revenue (e.g. COGS) 
+-  "below the line" costs: general and administrative costs
 
 A practical example of how this translates to a SaaS business is the desire to understand:
 
