--- a/content/posts/2023-09-02_markdown.md
+++ b/content/posts/2023-09-02_markdown.md
@@ -1,5 +1,5 @@
 +++
-title = 'The Imortality of Markdown'
+title = 'The Immortality of Markdown'
 date = 2023-09-08T17:07:16+10:00
 draft = false
 tags = ['markdown', 'blog']
