added AWS automation visual

--- a/content/posts/2023-10-09_metrics.md
+++ b/content/posts/2023-10-09_metrics.md
@@ -72,6 +72,8 @@ With these dimensions sorted it's then necessary to ensure your cost drivers (su
 
 A simple pattern I've developed for cost reporting in AWS is to extract the costs using [a script](https://github.com/toobstar/aws-scripts) and then store and model them in a BI Dashboard like [PowerBI](https://www.microsoft.com/en-us/power-platform/products/power-bi) or [Looker Studio](https://cloud.google.com/looker).
 
+![Cost Reporting](https://toobstar.github.io/images/aws_cost_reporting.jpg)
+
 The [script](https://github.com/toobstar/aws-scripts) uses the [AWS boto3 Python SDK](https://aws.amazon.com/sdk-for-python/).  Although the [AWS Cost explorer](https://aws.amazon.com/aws-cost-management/aws-cost-explorer/) is extremely useful for ad hoc cost reporting it has various constraints for ongoing cost tracking:
 
 - There is limited history in Cost Explorer although this [has been extended recently](https://aws.amazon.com/about-aws/whats-new/2023/11/aws-cost-explorer-provides-historical-granular-data/). By extracting the data yourself you can manage it fully.
@@ -79,6 +81,10 @@ The [script](https://github.com/toobstar/aws-scripts) uses the [AWS boto3 Python
 - The filters & grouping capabilities of the Cost Explorer UI are powerful, but lack the ability to be combined (using boolean logic) for more advanced tracking.  When using the API and simple object modelling this is quite easy to achieve.
 
 - The reporting and export to S3 capabilities of the Cost Explorer are tricky to work with.  Yes, there are [solutions that plug proper reporting platforms into this](https://grafana.com/grafana/dashboards/139-aws-billing/) but you need to be prepared for the effort to setup and maintain these. 
+
+- A fully automated model can be achieved using AWS Lambda to run the scripts 
+
+![AWS Cost Reporting Automation](https://toobstar.github.io/images/aws_cost_reporting_architecture.png)
 
 Other considerations with AWS Cost Tracking:
 
@@ -90,7 +96,7 @@ Other considerations with AWS Cost Tracking:
 
 - By using a solution outside of AWS it's easier to merge with the cost of other vendors.  You can also further process the data such as apply exchange rates (whether that be at time of invoicing, or an agreed rate set for budgeting purposes). 
 
-![Cost Reporting](https://toobstar.github.io/images/aws_cost_reporting.jpg)
+
 
 
 
