new AI Agent post and fix drafts

--- a/content/posts/2023-11-01_strategy.md
+++ b/content/posts/2023-11-01_strategy.md
@@ -1,5 +1,5 @@
 +++
-title = 'Strategy vs Execution'
+title = 'Strategy vs Execution (D)'
 date = 2023-10-12T12:46:01+11:00
 draft = true
 tags = ['strategy']
