--- a/content/posts/2023-11-17_mfa.md
+++ b/content/posts/2023-11-17_mfa.md
@@ -1,5 +1,5 @@
 +++
-title = 'Multi-Factor Authentication: What / When / Why?'
+title = 'Multi-Factor Authentication: What / When / Why? (D)'
 date = 2023-11-17T13:28:14+11:00
 draft = true
 tags = ['security', 'MFA', 'CISO']
